src/objects/SW_Spend_Request_Month__c.object
<CustomObject>
    <fields>
        <fullName>Actual_c__c</fullName>
        <label>Actual__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated__c</fullName>
        <label>Estimated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Brazil_Spend__c</fullName>
        <inlineHelpText>The expected Spend in Brazil</inlineHelpText>
        <label>Brazil Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAP_Brazil_Expected__c</fullName>
        <formula>Estimated__c - Expected_Brazil_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP (Brazil Expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAP_Non_Brazil_Expected__c</fullName>
        <formula>Estimated__c -  Non_Brazil_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP (Non-Brazil Expected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Brazil_Expected__c</fullName>
        <description>Non Brazil expected Spend</description>
        <inlineHelpText>Non Brazil expected Spend</inlineHelpText>
        <label>Non-Brazil Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OVERALL_GAP__c</fullName>
        <formula>GAP_Brazil_Expected__c + GAP_Non_Brazil_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OVERALL GAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <formula>SW_Spend_Request__r.PR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLT_1__c</fullName>
        <formula>SW_Spend_Request__r.SLT_1__c</formula>
        <label>SLT+1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSR_Status__c</fullName>
        <formula>TEXT(SW_Spend_Request__r.SSR_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSR_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSR_Title__c</fullName>
        <formula>SW_Spend_Request__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSR Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Spend_Request__c</fullName>
        <label>SW Spend Request</label>
        <referenceTo>Project_Spend__c</referenceTo>
        <relationshipLabel>SW Spend Request Months</relationshipLabel>
        <relationshipName>SW_Spend_Request_Months</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Spend_Breakdown__c</fullName>
        <formula>SW_Spend_Request__r.Spend_Breakdown__c</formula>
        <label>Spend Breakdown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_Location__c</fullName>
        <formula>text(SW_Spend_Request__r.Spend_Location__c )</formula>
        <label>Spend Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <label>SW Spend Request Month</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Budget_Expected_Items</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SSR_Title__c</columns>
        <columns>Expected_Brazil_Spend__c</columns>
        <columns>Non_Brazil_Expected__c</columns>
        <columns>Estimated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expected_Brazil_Spend__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Non_Brazil_Expected__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Budget &amp; Expected Items</label>
    </listViews>
    <nameField>
        <displayFormat>SSRM-{00000000}</displayFormat>
        <label>SW Spend Request Month Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SW Spend Request Months</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>